tests/paczka1/fuzzy1/56976851.err
Error in line 1: e22G6dslCz S726 94,4
Error in line 11: eSe5J S129 58,6
Error in line 36: A30 S71 56,77
Error in line 37: e22G6dslCz S726 99,8
